<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <!-- Первый переключатель для реле 1 -->

    <!-- Второй переключатель для реле 2 -->

    <!-- Текстовое поле для вывода состояния запроса -->

    <TextView
        android:id="@+id/relay_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relay_1"
        android:textColor="@color/primaryTextColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <Switch
        android:id="@+id/switchRelay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_off_relay_1"
        android:textSize="24sp"
        android:visibility="visible"
        android:textColor="@color/primaryTextColor"
        android:thumbTint="@color/switchActive"
        android:trackTint="@color/switchInactive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/relay_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relay_2"
        android:textColor="@color/primaryTextColor"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relay_1"
        app:layout_constraintVertical_bias="0.126" />

    <Switch
        android:id="@+id/switchRelay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_off_relay_2"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:thumbTint="@color/switchActive"
        android:trackTint="@color/switchInactive"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchRelay1"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/responseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E0E0E0"
        android:padding="8dp"
        android:text="@string/response_waiting"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/switchRelay2"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="@+id/relay_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <TextView
        android:id="@+id/responseTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/successBackground"
        android:padding="8dp"
        android:text="@string/response_success"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchRelay2"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/responseTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/errorBackground"
        android:padding="8dp"
        android:text="@string/response_error"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/responseTextView1"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/responseTextView1"
        app:layout_constraintTop_toBottomOf="@+id/responseTextView1"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/responseTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/messageBackground"
        android:padding="8dp"
        android:text="@string/response_exception"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/responseTextView1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/responseTextView1"
        app:layout_constraintTop_toBottomOf="@+id/responseTextView1"
        app:layout_constraintVertical_bias="0.779" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:text="@string/app_name"
        android:textColor="@color/highlightColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

</androidx.constraintlayout.widget.ConstraintLayout>
