<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewAppName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:text="@string/app_name"
        android:textColor="@color/highlightColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <EditText
        android:id="@+id/PlainLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/PlainLogin"
        android:inputType="text|textPassword"
        android:shadowColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPass"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/tvPass"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName2" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/switchActive"
        android:text="@string/btnLogin"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/tvNotice"
        app:layout_constraintStart_toStartOf="@+id/tvNotice"
        app:layout_constraintTop_toBottomOf="@+id/PlainLogin" />

    <TextView
        android:id="@+id/tvNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/errorBackground"
        android:text="@string/tvNotice"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/PlainLogin"
        app:layout_constraintStart_toStartOf="@+id/PlainLogin"
        app:layout_constraintTop_toBottomOf="@+id/PlainLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>